--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -127,7 +127,7 @@ $button-margin-bottom: $button-margin-right !default;
 $button-padding-vertical: $form-padding-vertical !default;
 $button-padding-horizontal: $form-padding-horizontal * 2 !default;
 // $button-border-width: $form-border-width !default;
-$button-color-light: white !default;
+// $button-color-light: white !default;
 // $button-type-scale: $form-type-scale !default;
 // $button-text-transform: uppercase !default;
 // $button-radius: $form-radius !default;
