Better .hover-* support, %button-box component, %pad-large component, fixing tooltips, fixing badges, .theme-light, .theme-dark, simulating border-collapse in grids!

--- a/scss/modules/animations/_classes.scss
+++ b/scss/modules/animations/_classes.scss
@@ -65,7 +65,7 @@
 // Transition classes
 .hover-all { @extend %hover-all; }
 
-#{prefixed-class('transition')} { @extend %transition; }
+#{prefixed-class('transition')}, #{prefixed-class('hover')} { @extend %transition; }
 
 .transition-lighten { @extend %transition-lighten; }
 .hover-lighten { @extend %hover-lighten; }
